[package]
name = "ntp_timeturner"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport  = "4.2"
chrono      = "0.4"
crossterm   = "0.29"
regex       = "1.11"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
notify      = "8.1.0"
statime = "0.4.0"
statime-linux = "0.4.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
rand = "0.8"
socket2 = "0.4"
