[package]
name = "ntp_timeturner"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport  = "4.2"
chrono      = "0.4"
crossterm   = "0.29"
regex       = "1.11"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0.141"
serde_yaml = "0.9"
notify      = "8.1.0"
get_if_addrs = "0.5"
actix-web = "4"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
log = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
systemd = { version = "0.10", features = ["journal"] }

